Flexbox column gap fixes

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -80,15 +80,18 @@ body {
   }
 }
 
-.flexbox {
+.flexbox-row {
   display: flex;
   flex-flow: row wrap;
+  margin-left: -16px;
+  margin-right: -16px;
   &__column {
+    padding: 0 16px;
     flex: 0 0 100%;
     max-width: 100%;
+    min-width: initial;
     @include breakpoint(medium) {
-      flex: 0 0 50%;
-      max-width: 50%;
+      flex: 1 1 0;
     }
   }
 }
